# Computer

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: adder.c.4AFC16901DACA1C2.idx  adder.cpp.90A31D422433ABCF.idx  adder.h.26D7072AAD55C966.idx  adder.hpp.D21CBC0AD1495B49.idx  gates.c.483F41B352402A9E.idx  gates.cpp.169AB20516370798.idx  gates.h.F2C676606BE9F94F.idx  gates.hpp.1C19D0188C743DCB.idx  main.c.66649B1DC6ECE5A7.idx  main.cpp.1B6DF735230D784B.idx
include/: adder.h  adder.hpp  alu.hpp  circuit.hpp  cmregister.hpp  cu.hpp  dlc.hpp  gates.h  gates.hpp  isa.hpp  lg.hpp  memory.hpp  op.hpp  register.hpp  types.hpp
src/: adder.cpp  alu.cpp  circuit.cpp  cmregister.cpp  dlc.cpp  gates.cpp  lg.cpp  main.cpp  memory.cpp  op.cpp  register.cpp
